--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/framework": "5.8.*",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
+        "predis/predis": "^1.1",
         "tomschlick/laravel-http2-server-push": "dev-patch"
     },
     "require-dev": {
