--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,10 @@ GITHUB_CLIENT_SECRET=
 GOOGLE_ANALYTICS=
 
 ADMIN_ID=
+
+DISCORD_BOT_TOKEN=
+DISCORD_CHANNEL_USER=
+DISCORD_CHANNEL_POST=
+
+SLACK_USER=
+SLACK_POST=
