--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,11 @@
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
+        "laravel/slack-notification-channel": "^2.0",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
+        "revolution/discord-manager": "^1.0",
         "tomschlick/laravel-http2-server-push": "dev-patch"
     },
     "require-dev": {
