--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
+        "laravel/horizon": "^3.0",
         "laravel/slack-notification-channel": "^2.0",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
