--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "tomschlick/laravel-http2-server-push": "dev-patch"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.2",
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
