--- a/.env.example
+++ b/.env.example
@@ -56,6 +56,7 @@ ADMIN_ID=
 DISCORD_BOT_TOKEN=
 DISCORD_CHANNEL_USER=
 DISCORD_CHANNEL_POST=
+DISCORD_CHANNEL_POST_REPORT=
 
 SLACK_USER=
 SLACK_POST=
