--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,11 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
+#DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
+#DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
