--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
+        "nunomaduro/phpinsights": "^1.0",
         "phpunit/phpunit": "^7.5"
     },
     "conflict": {
