--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,6 @@
         "laravel"
     ],
     "license": "MIT",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/kawax/laravel-http2-server-push"
-        }
-    ],
     "require": {
         "php": "^7.1.3",
         "ext-json": "*",
@@ -30,7 +24,7 @@
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
         "spatie/laravel-feed": "^2.2",
-        "tomschlick/laravel-http2-server-push": "dev-patch"
+        "revolution/laravel-server-push": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
