--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ cache:
 
 script:
 - vendor/bin/phpunit
-- php artisan insights --no-interaction
+#- php artisan insights --no-interaction
 
 after_script:
   - ./cc-test-reporter after-build  -t clover --exit-code $TRAVIS_TEST_RESULT
