--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,1 +1,12 @@
-preset: psr2
+php:
+  preset: laravel
+  enabled:
+    - alpha_ordered_imports
+  disabled:
+    - length_ordered_imports
+    - unused_use
+  finder:
+    not-name:
+      - index.php
+      - server.php
+
