--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laravel-notification-channels/discord": "^1.0",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
         "laravel/horizon": "^3.0",
         "laravel/slack-notification-channel": "^2.0",
         "laravel/socialite": "^4.1",
@@ -27,9 +27,7 @@
         "revolution/laravel-server-push": "^1.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.2",
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
+        "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
