--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,9 @@
         "laravel/slack-notification-channel": "^2.0",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^2.0",
-        "spatie/laravel-feed": "^2.2",
-        "revolution/laravel-server-push": "^1.0"
+        "league/commonmark-ext-autolink": "^1.0",
+        "revolution/laravel-server-push": "^1.0",
+        "spatie/laravel-feed": "^2.2"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
