--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     "php": "^7.2",
     "ext-json": "*",
     "ext-mbstring": "*",
-    "barryvdh/laravel-cors": "^0.11.3",
     "doctrine/dbal": "^2.9",
     "fideloper/proxy": "^4.0",
+    "fruitcake/laravel-cors": "^1.0",
     "intervention/image": "^2.4",
     "laravel-notification-channels/discord": "^1.0",
     "laravel/framework": "^6.0",
@@ -29,12 +29,12 @@
   },
   "require-dev": {
     "facade/ignition": "^1.4",
-    "fzaninotto/faker": "^1.4",
-    "mockery/mockery": "^1.0",
+    "fzaninotto/faker": "^1.9.1",
+    "mockery/mockery": "^1.3",
     "nunomaduro/collision": "^3.0",
     "nunomaduro/phpinsights": "^1.0",
     "barryvdh/laravel-ide-helper": "^2.6",
-    "phpunit/phpunit": "^8.0"
+    "phpunit/phpunit": "^8.5"
   },
   "conflict": {
     "cakephp/core": "*"
