--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,17 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^7.2",
+    "php": "^7.2.5",
     "ext-json": "*",
     "ext-mbstring": "*",
     "doctrine/dbal": "^2.9",
-    "fideloper/proxy": "^4.0",
+    "fideloper/proxy": "^4.2",
     "fruitcake/laravel-cors": "^1.0",
+    "guzzlehttp/guzzle": "^6.3",
     "intervention/image": "^2.4",
     "laravel-notification-channels/discord": "^1.0",
-    "laravel/framework": "^6.0",
-    "laravel/horizon": "^3.0",
+    "laravel/framework": "^7.0",
+    "laravel/horizon": "^4.0",
     "laravel/slack-notification-channel": "^2.0",
     "laravel/socialite": "^4.1",
     "laravel/tinker": "^2.0",
@@ -28,13 +29,13 @@
     "spatie/laravel-feed": "^2.2"
   },
   "require-dev": {
-    "facade/ignition": "^1.4",
+    "barryvdh/laravel-ide-helper": "^2.6",
+    "facade/ignition": "^2.0",
     "fzaninotto/faker": "^1.9.1",
     "mockery/mockery": "^1.3",
-    "nunomaduro/collision": "^3.0",
-    "nunomaduro/phpinsights": "^1.0",
-    "barryvdh/laravel-ide-helper": "^2.6",
-    "phpunit/phpunit": "^8.5"
+    "nunomaduro/collision": "^4.1",
+    "nunomaduro/phpinsights": "^1.14",
+    "phpunit/phpunit": "^9.0"
   },
   "conflict": {
     "cakephp/core": "*"
