--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ branches:
     - master
 
 script:
-- vendor/bin/phpunit
+- php artisan test
 #- php artisan insights --no-interaction
 
 after_script:
