--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: composer update action step
-        uses: kawax/composer-update-action@master
+      - name: composer update action
+        uses: kawax/composer-update-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GIT_NAME: kawax
