--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "laravel/socialite": "^4.1",
     "laravel/tinker": "^2.0",
     "league/commonmark": "^1.4",
+    "predis/predis": "^1.1",
     "revolution/laravel-pagination-bulma": "^1.0",
     "revolution/laravel-server-push": "^1.0",
     "spatie/laravel-feed": "^2.2"
