--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,10 @@
     "fideloper/proxy": "^4.2",
     "fruitcake/laravel-cors": "^2.0",
     "intervention/image": "^2.4",
+    "guzzlehttp/guzzle": "^7.0.1",
     "laravel-notification-channels/discord": "^1.0",
-    "laravel/framework": "^7.0",
-    "laravel/horizon": "^4.0",
+    "laravel/framework": "^8.0",
+    "laravel/horizon": "^5.0",
     "laravel/slack-notification-channel": "^2.0",
     "laravel/socialite": "^5.0",
     "laravel/tinker": "^2.0",
@@ -32,7 +33,7 @@
     "facade/ignition": "^2.0",
     "fzaninotto/faker": "^1.9.1",
     "mockery/mockery": "^1.3",
-    "nunomaduro/collision": "^4.1",
+    "nunomaduro/collision": "^5.0",
     "nunomaduro/phpinsights": "^1.14",
     "phpunit/phpunit": "^9.0"
   },
@@ -51,12 +52,10 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\": "app/"
-    },
-    "classmap": [
-      "database/seeds",
-      "database/factories"
-    ]
+      "App\\": "app/",
+      "Database\\Factories\\": "database/factories/",
+      "Database\\Seeders\\": "database/seeders/"
+    }
   },
   "autoload-dev": {
     "psr-4": {
