--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     "doctrine/dbal": "^2.9",
     "fideloper/proxy": "^4.2",
     "fruitcake/laravel-cors": "^2.0",
-    "intervention/image": "^2.4",
     "guzzlehttp/guzzle": "^7.0.1",
+    "intervention/image": "^2.4",
     "laravel-notification-channels/discord": "^1.0",
     "laravel/framework": "^8.0",
     "laravel/horizon": "^5.0",
@@ -26,6 +26,7 @@
     "predis/predis": "^1.1",
     "revolution/laravel-pagination-bulma": "^1.0",
     "revolution/laravel-server-push": "^1.0",
+    "revolution/laravel-str-mixins": "^0.0.1",
     "spatie/laravel-feed": "^2.2"
   },
   "require-dev": {
