--- a/composer.json
+++ b/composer.json
@@ -75,6 +75,9 @@
     ],
     "post-create-project-cmd": [
       "@php artisan key:generate --ansi"
-    ]
+    ],
+    "ide-helper:meta": "php artisan ide-helper:meta",
+    "ide-helper:generate": "php artisan ide-helper:generate",
+    "ide-helper:models": "php artisan ide-helper:models -N"
   }
 }
