--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "laravel/tinker": "^2.0",
     "league/commonmark": "^1.4",
     "predis/predis": "^1.1",
+    "revolution/laravel-namespaced-helpers": "^1.0",
     "revolution/laravel-pagination-bulma": "^1.0",
     "revolution/laravel-server-push": "^1.0",
     "revolution/laravel-str-mixins": "^2.0",
