--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "predis/predis": "^1.1",
     "revolution/laravel-namespaced-helpers": "^1.0",
     "revolution/laravel-pagination-bulma": "^1.0",
+    "revolution/laravel-server-push": "^1.0",
     "revolution/laravel-str-mixins": "^2.0",
     "spatie/laravel-feed": "^2.2"
   },
