--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,5 +32,5 @@ jobs:
           coverageCommand: vendor/bin/phpunit
           coverageLocations: build/logs/clover.xml:clover
       - name: Deploy
-        if: ${{ success() && github.event != 'pull_request' }}
+        if: success() && (github.event != 'pull_request')
         run: curl -s "${{ secrets.FORGE }}"
