--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^7.4",
+    "php": "^7.4||^8.0",
     "ext-json": "*",
     "ext-mbstring": "*",
     "doctrine/dbal": "^2.9",
@@ -28,7 +28,7 @@
     "revolution/laravel-pagination-bulma": "^1.0",
     "revolution/laravel-server-push": "^1.0",
     "revolution/laravel-str-mixins": "^2.0",
-    "spatie/laravel-feed": "^2.2"
+    "spatie/laravel-feed": "^3.0"
   },
   "require-dev": {
     "barryvdh/laravel-ide-helper": "^2.6",
@@ -36,7 +36,6 @@
     "fakerphp/faker": "^1.9.1",
     "mockery/mockery": "^1.3",
     "nunomaduro/collision": "^5.0",
-    "nunomaduro/phpinsights": "^1.14",
     "phpunit/phpunit": "^9.0"
   },
   "conflict": {
