--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=bb9186251bdae0971d6c",
-    "/css/app.css": "/css/app.css?id=4f4e3654920522a26662"
+    "/js/app.js": "/js/app.js?id=722890ce31673acf5646",
+    "/css/app.css": "/css/app.css?id=c19faf879ed26eb6cb5f",
+    "/fonts/NotoSansCJKjp-Black.ttf": "/fonts/NotoSansCJKjp-Black.ttf?id=f1d902c92b11e2a9eda9"
 }
