--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=eda255d8c526b297bc26",
-    "/css/app.css": "/css/app.css?id=657fb44c2c301d8b2c59",
+    "/js/app.js": "/js/app.js?id=7619546caae43f3ce86f",
+    "/css/app.css": "/css/app.css?id=c899a10124765ab6944c",
+    "/fonts/.DS_Store": "/fonts/.DS_Store?id=eb067a18c1752db002bb",
     "/fonts/NotoSansCJKjp-Black.ttf": "/fonts/NotoSansCJKjp-Black.ttf?id=f1d902c92b11e2a9eda9"
 }
