--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,18 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^8.0",
+    "php": "^8.1",
     "ext-json": "*",
     "ext-mbstring": "*",
     "doctrine/dbal": "^3.1",
-    "fruitcake/laravel-cors": "^2.0",
     "guzzlehttp/guzzle": "^7.0.1",
     "intervention/image": "^2.4",
     "laravel-notification-channels/discord": "^1.0",
-    "laravel/framework": "^8.0",
+    "laravel/framework": "^9.0",
     "laravel/horizon": "^5.0",
     "laravel/slack-notification-channel": "^2.0",
     "laravel/socialite": "^5.0",
     "laravel/tinker": "^2.0",
-    "league/commonmark": "^1.4",
     "revolution/laravel-namespaced-helpers": "^1.0",
     "revolution/laravel-pagination-bulma": "^1.0",
     "revolution/laravel-str-mixins": "^2.0",
@@ -29,14 +27,11 @@
   },
   "require-dev": {
     "barryvdh/laravel-ide-helper": "^2.6",
-    "facade/ignition": "^2.0",
+    "spatie/laravel-ignition": "^1.0",
     "fakerphp/faker": "^1.9.1",
     "mockery/mockery": "^1.3",
-    "nunomaduro/collision": "^5.0",
-    "phpunit/phpunit": "^9.0"
-  },
-  "conflict": {
-    "cakephp/core": "*"
+    "nunomaduro/collision": "^6.1",
+    "phpunit/phpunit": "^9.5"
   },
   "config": {
     "optimize-autoloader": true,
@@ -66,6 +61,9 @@
     "post-autoload-dump": [
       "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
       "@php artisan package:discover --ansi"
+    ],
+    "post-update-cmd": [
+      "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
     ],
     "post-root-package-install": [
       "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
