--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=7619546caae43f3ce86f",
-    "/css/app.css": "/css/app.css?id=c899a10124765ab6944c",
-    "/fonts/.DS_Store": "/fonts/.DS_Store?id=eb067a18c1752db002bb",
-    "/fonts/NotoSansCJKjp-Black.ttf": "/fonts/NotoSansCJKjp-Black.ttf?id=f1d902c92b11e2a9eda9"
+    "/js/app.js": "/js/app.js?id=8ebff67b547b128edf437423c42aaa7c",
+    "/css/app.css": "/css/app.css?id=24edf0fe63453198272a64491644c1cf",
+    "/fonts/.DS_Store": "/fonts/.DS_Store?id=eb067a18c1752db002bb23fe95f313a2",
+    "/fonts/NotoSansCJKjp-Black.ttf": "/fonts/NotoSansCJKjp-Black.ttf?id=f1d902c92b11e2a9eda9581c1ae254ef"
 }
